feat: comprehensive system-wide optimization and feature enhancement
- Auth: Unified auth response, added refresh token support and logout blacklisting.
- User: Implemented self-service profile and password management.
- Post: Enhanced admin search/filtering, fixed tag sync, and unified view merging.
- Wiki Mode: Implemented hierarchical posts with tree navigation, breadcrumbs, and prev/next links.
- Comment: Optimized tree structure, added sensitive word filtering, and admin moderation.
- Storage: Centralized configuration, added file search, and implemented automatic WebP conversion for images.
- Webhook: Migrated to RabbitMQ for reliability and added delivery audit logging.
- i18n: Added multi-language support for system messages (EN/ZH).
- SEO: Automated robots.txt and sitemap.xml maintenance, and added OpenGraph metadata.
- Analytics: Implemented pre-aggregated daily stats and trending post rankings.
- Newsletter: Developed mailing list subscription with double opt-in and weekly automated newsletters.
- Fixed various bugs in SSG engine path validation and circular dependencies.